--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ url: https://caihanlin.com
 # Owner/author information
 owner:
   name: Huijia Lu
-  avatar: Zoso.jpg
+  avatar: Zoso.jpeg
  # bio:
   email: huijialu0526@gmail.com
   # cv: https://caihanlin.com/file/CV-HanlinCAI.pdf
