--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Huijia Lu
 # tagline: Here is personal website of Huijia Lu. Powered by Jekyll, based on the Minimal Mistakes theme.
 description: Two roads diverged in woods, I took the one less traveled by.
 #Comment out url when working locally to resolve base urls correctly
-url: https://caihanlin.com
+url: https://huijialu.com
 
 # Owner/author information
 owner:
@@ -10,12 +10,12 @@ owner:
   avatar: Zoso.jpeg
  # bio:
   email: huijialu0526@gmail.com
-  cv: https://github.com/DrunkCat69/DrunkCat69.github.io/blob/main/cv/Huijia%20Lu.pdf
+  cv: https://huijialu.com/file/HuijiaLu.pdf
   # Social networking links are used in author-bio sidebar. Update and remove as you like.
   github: DrunkCat69
-  linkedin: https://www.linkedin.com/in/huijia-lu-249405265/
+  linkedin: huijialu
   # facebook: caihanlin2002
-  instagram: https://www.instagram.com/zoso__18/
+  instagram: zoso__18
   # lastfm:
   # tumblr:
   # For Google Authorship https://plus.google.com/authorship
