--- a/_config.yml
+++ b/_config.yml
@@ -2,20 +2,20 @@ title: Huijia Lu
 # tagline: Here is personal website of Huijia Lu. Powered by Jekyll, based on the Minimal Mistakes theme.
 description: Two roads diverged in woods, I took the one less traveled by.
 #Comment out url when working locally to resolve base urls correctly
-url: https://huijialu.com
+url: https://drunkcat69.github.io/
 
 # Owner/author information
 owner:
   name: Huijia Lu
-  avatar: Zoso.jpeg
+  avatar: avat.jpg
  # bio:
   email: huijialu0526@gmail.com
-  cv: https://huijialu.com/file/HuijiaLu.pdf
+  cv: https://drunkcat69.github.io/file/HuijiaLu.pdf
   # Social networking links are used in author-bio sidebar. Update and remove as you like.
   github: DrunkCat69
-  linkedin: huijialu
+  linkedin: huijia-lu-249405265/
   # facebook: caihanlin2002
-  instagram: zoso__18
+  instagram: zoso__18/
   # lastfm:
   # tumblr:
   # For Google Authorship https://plus.google.com/authorship
