--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ url: https://drunkcat69.github.io/
 # Owner/author information
 owner:
   name: Huijia Lu
-  avatar: chicken.png
+  avatar: chicken.PNG
  # bio:
   email: huijialu0526@gmail.com
   cv: https://drunkcat69.github.io/file/HuijiaLu.pdf
